Complete Problem 26